--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- We will put our React component inside this div. -->
     <div id="like_button_container"></div>
-    <div id="root"></div>
+    <div id="root" style="display: flex;justify-content: center;align-items: center;"></div>
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
